wip: added func signatures to RedirectionService and prepared funcs for implementation. Added todos for next steps

--- a/gotsrpc.yml
+++ b/gotsrpc.yml
@@ -5,7 +5,7 @@ module:
 targets:
   redirect:
     services:
-      /services/redirects/redirect: Redirect
-    package: github.com/foomo/redirects/redirect
+      /services/redirects/redirect: RedirectionService
+    package: github.com/foomo/redirects/services/redirect
     tsrpc:
-      - Redirect
+      - RedirectionService
