--- a/gotsrpc.yml
+++ b/gotsrpc.yml
@@ -5,7 +5,9 @@ module:
 targets:
   redirectdefinition:
     services:
-      /services/redirects/redirectdefinition: RedirectDefinitionService
+      /services/redirects/redirectdefinition/admin: AdminService
+      /services/redirects/redirectdefinition/internal: InternalService
     package: github.com/foomo/redirects/domain/redirectdefinition/service
     tsrpc:
-      - RedirectDefinitionService
+      - AdminService
+      - InternalService
